src/com/plicku/flowla/plugin/grammer/Flowla.bnf
{
  parserClass="com.plicku.flowla.plugin.parser.FlowlaParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Flowla"
  psiImplClassSuffix="Impl"
  psiPackage="com.plicku.flowla.plugin.psi"
  psiImplPackage="com.plicku.flowla.plugin.impl"

  elementTypeHolderClass="com.plicku.flowla.plugin.psi.FlowlaTypes"
  elementTypeClass="com.plicku.flowla.plugin.psi.FlowlaElementType"
  tokenTypeClass="com.plicku.flowla.plugin.psi.FlowlaTokenType"
}

simpleFile ::= item_*

private item_ ::= (steps|COMMENT|CRLF)

steps ::= step*
step ::= space* step_keyword stepname? (eol+ | eof) multiline_arg? (space | eol)*
step_keyword ::= ('Given ' | 'Then ' | 'For Each ' | 'But ' | 'And ')
stepname ::= (!eol )*
eol ::= 'regexp:\r?\n'
space ::= (' ' | 'regex:\t')
